GitVersion1/objects/CFR_Data__c.object
<CustomObject>
    <description>This custom Object is used to store CFR data.</description>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Line_2__c</fullName>
        <label>Address Line 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BDM__c</fullName>
        <label>BDM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cargill_Product_Converted_To__c</fullName>
        <label>Cargill Product Converted To</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitive_Brand_Displaced__c</fullName>
        <label>Competitive Brand Displaced</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Value 1</fullName>
                </value>
                <value>
                    <fullName>Value 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consumer_Events_Attendance_Beef__c</fullName>
        <label>Consumer Events Attendance-Beef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Attendance_Equine__c</fullName>
        <label>Consumer Events Attendance-Equine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Attendance_Pet__c</fullName>
        <label>Consumer Events Attendance-Pet</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Attendance_Poultry__c</fullName>
        <label>Consumer Events Attendance -Poultry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Attendance_Wildlife__c</fullName>
        <label>Consumer Events Attendance-Wildlife</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Beef__c</fullName>
        <label>Consumer Events-Beef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Equine__c</fullName>
        <label>Consumer Events-Equine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Poultry__c</fullName>
        <label>Consumer Events-Poultry</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consumer_Events_Wildlife__c</fullName>
        <label>Consumer Events-Wildlife</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cost_Center_Number__c</fullName>
        <label>Cost Center Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Business_Plan_Meetings__c</fullName>
        <label>Dealer Business Plan Meetings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Meetings_Held__c</fullName>
        <label>Dealer Meetings Held</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Farm_Calls__c</fullName>
        <label>Farm Calls</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Month_Year__c</fullName>
        <label>Month/Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>New_D_Proposal_Landed__c</fullName>
        <label>New D Proposal Landed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_D_Proposals_Given__c</fullName>
        <label>New D Proposals Given</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Skus_Added__c</fullName>
        <label>New Skus Added</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Dealers_Attended_Meetings__c</fullName>
        <label>Number of Dealers Attended Meetings</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Of_Horses_Converted_To__c</fullName>
        <label># Of Horses Converted To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organic_Proposals_Given__c</fullName>
        <label>Organic Proposals Given</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organic_Proposals_Landed__c</fullName>
        <label>Organic Proposals Landed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payment_Due_date__c</fullName>
        <label>Payment Due date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Discretionary Fund</fullName>
                </value>
                <value>
                    <fullName>Business Builder &amp; Cost center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Check_Amount__c</fullName>
        <label>Referral Check Amount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referred_By__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is used to store commercial customer account.</description>
        <label>Referred By</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>Commercial_Customer</value>
            </filterItems>
            <filterItems>
                <field>Account.CFR_type__c</field>
                <operation>equals</operation>
                <value>Brand Ambassador</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>CFR Data</relationshipLabel>
        <relationshipName>CFR_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_Farm_Name__c</fullName>
        <label>Referred Farm Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Request Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retailer_Name_Where_Purchasing_Feed__c</fullName>
        <label>Retailer Name Where Purchasing Feed</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Submitted&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submit for Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor_Name__c</fullName>
        <label>Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CFR Data</label>
    <listViews>
        <fullName>CFR_Monthly_Data_Collection_Requests_CFR_Data</fullName>
        <filterScope>Queue</filterScope>
        <label>CFR Monthly Data Collection Requests</label>
        <queue>CFR_Monthly_Data_Collection_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CFR_Pay_Invoice_Requests_CFR_Data</fullName>
        <filterScope>Queue</filterScope>
        <label>CFR Pay Invoice Requests</label>
        <queue>CFR_Pay_Invoice_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CFR_Sponsorship_Referral_Requests_CFR_Data</fullName>
        <filterScope>Queue</filterScope>
        <label>CFR Sponsorship Referral Requests</label>
        <queue>CFR_Sponsorship_Referral_Requests</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CFR Data</pluralLabel>
    <recordTypes>
        <fullName>Monthly_Data_Collection</fullName>
        <active>true</active>
        <label>Monthly Data Collection</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pay_Invoice_request</fullName>
        <active>true</active>
        <description>CFR Pay Invoice request</description>
        <label>Pay Invoice request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sponsorship_Referral</fullName>
        <active>true</active>
        <label>Sponsorship Referral</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>CCN_is_required</fullName>
        <active>true</active>
        <description>AND(
$RecordType.DeveloperName=&quot;Pay_Invoice_request&quot;,
ISPICKVAL( Payment_Method__c, &quot;Business Builder &amp; Cost center&quot;),
ISBLANK(Text(Cost_Center_Number__c))
)</description>
        <errorConditionFormula>AND(
$RecordType.DeveloperName=&quot;Pay_Invoice_request&quot;,
ISNULL(Cost_Center_Number__c),
ISPICKVAL(Payment_Method__c,&quot;Business Builder &amp; Cost center&quot;)
)</errorConditionFormula>
        <errorMessage>Cost Center Number is requires if payment method is Business Builder &amp; Cost center</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CFR_Monthly_Data_Required_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>AND( RecordType.DeveloperName== $Label.CFR_MonthlyDataRecordType  ,OR(ISBLANK(BDM__c),ISBLANK(Consumer_Events_Attendance_Poultry__c
),ISBLANK(Consumer_Events_Wildlife__c),ISBLANK(Consumer_Events_Attendance_Beef__c
),ISBLANK(Consumer_Events_Attendance_Equine__c),ISBLANK(Consumer_Events_Attendance_Pet__c),ISBLANK(Consumer_Events_Beef__c),ISBLANK(Consumer_Events_Equine__c),ISBLANK(Consumer_Events_Poultry__c),ISBLANK(Consumer_Events_Wildlife__c),ISBLANK(Dealer_Business_Plan_Meetings__c
),ISBLANK(Dealer_Meetings_Held__c),ISBLANK(Farm_Calls__c),ISBLANK(Month_Year__c),ISBLANK(New_D_Proposal_Landed__c),ISBLANK(New_D_Proposals_Given__c
),ISBLANK(New_Skus_Added__c),ISBLANK(Number_of_Dealers_Attended_Meetings__c),ISBLANK(Organic_Proposals_Given__c),ISBLANK(Organic_Proposals_Landed__c
)))</errorConditionFormula>
        <errorMessage>Please fill all the fields to submit the form</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sponsorship_Referral_Fields_Required</fullName>
        <active>true</active>
        <description>All the Sponsorship fields are required.</description>
        <errorConditionFormula>AND(
OR(
 ISBLANK(Name),
 ISBLANK(Referred_By__c), 
 ISBLANK(Referred_Farm_Name__c), 
 ISBLANK(Contact_Name__c), 
 ISBLANK(Phone_Number__c),
 ISBLANK(Address_Line_1__c), 
 ISBLANK(Address_Line_2__c),
 ISBLANK(City__c),
 ISBLANK(State__c),
 ISBLANK(Retailer_Name_Where_Purchasing_Feed__c),
 ISBLANK(Of_Horses_Converted_To__c ),
 ISBLANK(Referral_Check_Amount__c),
 ISPICKVAL(Competitive_Brand_Displaced__c ,&quot;&quot;),
 ISPICKVAL(Cargill_Product_Converted_To__c ,&quot;&quot;)),
($RecordType.Name == &quot;Sponsorship Referral&quot;))</errorConditionFormula>
        <errorMessage>Please enter all fields to save the record.</errorMessage>
    </validationRules>
</CustomObject>